# Messenger

./: .editorconfig  .gitignore  Cargo.toml  HealthCheck.sln  LICENSE.md  Makefile  README.md  docker-compose.yaml  go.mod  jest.config.js  main.go  nodemon.json  package-lock.json  package.json  pom.xml  template.js  webpack.config.backend.js  webpack.config.frontend.js  webpack.config.frontend.production.js
.github/workflows/: audit-scheduled.yml  ci-project.yml  codeql.yml  go.yml  node.js.yml
HealthCheckAPI/Properties/: launchSettings.json
ast/: ast.go  ast_test.go
backend/: devBundel.js  express.js  server.js
backend/controllers/: auth.controller.js  post.controller.js  user.controller.js
benchmark/: main.go
code/: code.go  code_test.go
compiler/: compiler.go  compiler_test.go  symbol_table_test.go
config/: config.js
docs/: STORIES.md
documents/: DATAMODELING.md  USERSTORIES.md
evaluator/: builtins.go  evaluator.go  evaluator_test.go
frontend/: App.js  MainRouter.js  main.js  theme.js
lexer/: lexer.go  lexer_test.go
mern-social-network-backend/: package-lock.json  package.json
mern-social-network-frontend/: package-lock.json  package.json
object/: object.go
parser/: parser.go  parser_test.go
public/: index.html
repl/: repl.go
server/: .env.example  .gitignore  Makefile  README.md  docker-compose.dev.yaml  go.mod  go.sum
src/: main.js  main.rs  router.js  startup.rs  store.js
tests/: health_check.rs
vm/: frame.go  vm.go  vm_test.go
web/: README.md  package.json
web-client/: .eslintrc.js  package-lock.json  package.json
(+113 files in other folders)
